artificer/ci/ingresses.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ci-server
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - ci.goblinwrangler.com
      secretName: ci-tls
  rules:
    - host: ci.goblinwrangler.com
      http:
        paths:
          - backend:
              serviceName: ci-server
              servicePort: 8080
